--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-rag-chat",
+  "name": "vue-speak2me",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -39,10 +39,12 @@
     "@types/node": "^20.17.9",
     "@types/three": "^0.171.0",
     "@vitejs/plugin-vue": "^4.4.0",
+    "fs-extra": "^11.2.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.5",
+    "vite-plugin-copy": "^0.1.6",
     "vue-tsc": "^1.8.19"
   }
 }
