--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@alicloud/bailian20231229": "^1.0.0",
     "@alicloud/openapi-client": "^0.4.7",
     "@alicloud/tea-util": "^1.4.7",
+    "@nlpjs/basic": "^4.27.0",
+    "@nlpjs/core": "^4.26.1",
+    "@nlpjs/lang-en": "^4.26.1",
     "@tailwindcss/typography": "^0.5.10",
     "@vueuse/core": "^10.5.0",
     "autoprefixer": "^10.4.16",
