--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@alicloud/tea-util": "^1.4.7",
     "@nlpjs/basic": "^4.27.0",
     "@nlpjs/core": "^4.26.1",
-    "@nlpjs/lang-en": "^4.26.1",
+    "@nlpjs/lang-zh": "^4.26.1",
     "@tailwindcss/typography": "^0.5.10",
     "@vueuse/core": "^10.5.0",
     "autoprefixer": "^10.4.16",
