--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,9 +57,21 @@ jobs:
           # Create deployment directory if it doesn't exist
           #mkdir -p /var/www/speak2me
           
-          # Copy new build files
-          scp -i ${{ secrets.SERVER_SSH_KEY }} -r ${{ github.workspace }}/dist/* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/speak2me/
+          # Prepare SSH key
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+            
+          # Create and secure the SSH key file
+          echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
           
+          
+          # Copy new build files
+          scp -i ~/.ssh/deploy_key -r ${{ github.workspace }}/dist/* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/speak2me/
+          
+          # Clean up key file
+          rm -f ~/.ssh/deploy_key  
+
           # Set correct permissions
           #sudo chown -R www-data:www-data /var/www/speak2me
           
