--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,7 +75,7 @@ jobs:
           
           
           # Copy new build files
-          scp -i ~/.ssh/deploy_key -r ${{ github.workspace }}/dist/* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/speak2me/
+          scp -i ~/.ssh/deploy_key -r ${{ github.workspace }}/dist ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/speak2me/
           
           # Clean up key file
           rm -f ~/.ssh/deploy_key  
