--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,7 +81,7 @@ jobs:
           
           
           # Copy new build files
-          scp -i ~/.ssh/deploy_key -r ./deployment/* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/speak2me/
+          scp -i ~/.ssh/deploy_key -r ./deployment ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/speak2me/
           
           # Clean up key file
           rm -f ~/.ssh/deploy_key  
