remove unnecessary dependencies, add dependency visulzation

--- a/package.json
+++ b/package.json
@@ -19,11 +19,8 @@
     "@vueuse/core": "^10.5.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.2",
     "highlight.js": "^11.8.0",
-    "http-proxy-middleware": "^3.0.3",
     "marked": "^9.1.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
@@ -39,6 +36,7 @@
     "@types/three": "^0.171.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "fs-extra": "^11.2.0",
+    "rollup-plugin-visualizer": "^5.13.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "typescript": "^5.2.2",
