--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20.17.9",
     "@types/three": "^0.171.0",
     "@vitejs/plugin-vue": "^4.4.0",
+    "async-mutex": "^0.5.0",
     "fs-extra": "^11.2.0",
     "rollup-plugin-visualizer": "^5.13.1",
     "ts-node": "^10.9.2",
