--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "highlight.js": "^11.8.0",
     "marked": "^9.1.2",
+    "pako": "^2.1.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "three": "^0.158.0",
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.21",
     "@types/marked": "^5.0.1",
     "@types/node": "^20.17.9",
+    "@types/pako": "^2.0.3",
     "@types/three": "^0.171.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "async-mutex": "^0.5.0",
